--- a/roles/provision-checkbox/tasks/provision.yml
+++ b/roles/provision-checkbox/tasks/provision.yml
@@ -85,7 +85,7 @@
 
 - name: Update inventory
   lineinfile:
-    path: ./inventory
+    path: ./deploy-inventory
     insertafter: 'checkbox'
     line: "{{aws.instances[0].public_ip}} ansible_ssh_user=ubuntu ansible_ssh_private_key_file=~/checkbox-key.pem"
     state: present
