--- a/roles/provision-jenkins/tasks/provision.yml
+++ b/roles/provision-jenkins/tasks/provision.yml
@@ -82,7 +82,7 @@
 
 - name: Update inventory
   lineinfile:
-    path: ./inventory
+    path: ./build-inventory
     insertafter: 'jenkins'
     line: "{{aws.instances[0].public_ip}} ansible_ssh_user=ubuntu ansible_ssh_private_key_file=~/jenkins-key.pem"
     state: present
