--- a/jenkins_files/itrust.yml
+++ b/jenkins_files/itrust.yml
@@ -25,7 +25,7 @@
         matches:
         - log-text: null
           operator: AND
-        run-if-job-successful: false
+        run-if-job-successful: true
         script: |-
             cd /var/lib/jenkins/project_repo
             ansible-playbook -i deploy-inventory deploy-itrust.yml
