--- a/roles/deploy-itrust/tasks/setup.yml
+++ b/roles/deploy-itrust/tasks/setup.yml
@@ -1,3 +1,31 @@
+- name: update mysql root password for all root accounts
+  become: yes
+  mysql_user:
+    name: root
+    host: "{{ item }}"
+    password: "{{ lookup('env', 'MYSQL_PASSWORD') }}"
+    login_user: root
+    login_password: "{{ lookup('env', 'MYSQL_PASSWORD') }}"
+    check_implicit_admin: yes
+    priv: "*.*:ALL,GRANT"
+  with_items:
+    - 127.0.0.1
+    - ::1
+    - localhost
+
+- file:
+    path: "{{ ansible_env.HOME }}/mysql-apt-config_0.8.9-1_all.deb"
+    state: absent
+    mode: 0440
+  # become: yes
+
+- name: Start the MySQL service
+  become: yes
+  service:
+    name: mysql
+    state: started
+    enabled: true
+
 - name: Copy db.properties File
   become: yes
   copy:
