--- a/roles/configure-itrust/tasks/sql.yml
+++ b/roles/configure-itrust/tasks/sql.yml
@@ -1,3 +1,4 @@
+# REFERENCES: http://mysql.freeideas.cz/subdom/mysql/2017/07/26/install-latest-mysql-5-7-on-remote-instance-using-ansible/
 - name: Download mysql repo
   get_url:
     url: https://dev.mysql.com/get/mysql-apt-config_0.8.9-1_all.deb
