--- a/roles/configure-jenkins/tasks/jjb.yml
+++ b/roles/configure-jenkins/tasks/jjb.yml
@@ -15,6 +15,8 @@
   pip:
     name: jenkins-job-builder
 
+# REFERENCES: https://docs.openstack.org/infra/jenkins-job-builder/
+
 - name: Disable Jenkins' initial authorization wizard
   become: yes
   replace:
