--- a/roles/deploy-itrust/tasks/setup.yml
+++ b/roles/deploy-itrust/tasks/setup.yml
@@ -1,3 +1,4 @@
+# REFERENCES:  https://stackoverflow.com/questions/42267299/ansible-install-mysql-5-7-set-root-user-password?rq=1
 - name: update mysql root password for all root accounts
   become: yes
   mysql_user:
