Update fuzzer shell script and fuzzer.java

--- a/roles/itrust-fuzzer/tasks/fuzz-itrust-repo.yml
+++ b/roles/itrust-fuzzer/tasks/fuzz-itrust-repo.yml
@@ -27,14 +27,28 @@
     git config --global user.email "temp@temp.com";
     git config --global user.name "temp";
 
-    for i in `seq 1 100`; do
+    COUNTER=0
+    RUNS=100
+
+    while [ $COUNTER -lt $RUNS ]; do
       cd {{ ansible_env.HOME }}/Milestone2/iTrust-fuzzer;
       mvn exec:java -Dexec.mainClass="com.cowboydevop.fuzzer.Fuzzer";
 
-      cd {{ ansible_env.HOME }}/Milestone2/iTrust2-v2;
-      git add *;
-      git commit -m 'temp commit';
-      git reset --hard HEAD^;
+      cd {{ ansible_env.HOME }}/Milestone2/iTrust2-v2/iTrust2;
+      mvn compile;
+      if [ "$?" -eq "0" ]
+      then
+        echo "Compiles. Committing!"
+        git add *;
+        git commit -m 'temp commit';
+        # May need to push to remote repo too
+        git reset --hard HEAD^;
+        let COUNTER+=1
+
+      else
+        echo "Does not compile. Removing Changes."
+        git reset --hard HEAD;
+      fi
     done
   async: 1000
   poll: 0
