--- a/roles/itrust-fuzzer/tasks/fuzz-itrust-repo.yml
+++ b/roles/itrust-fuzzer/tasks/fuzz-itrust-repo.yml
@@ -35,7 +35,7 @@
       mvn exec:java -Dexec.mainClass="com.cowboydevop.fuzzer.Fuzzer";
 
       cd {{ ansible_env.HOME }}/Milestone2/iTrust2-v2/iTrust2;
-      # mvn compile;
+      mvn compile;
       if [ "$?" -eq "0" ]
       then
         echo "Compiles. Committing!"
