--- a/roles/configure-itrust/tasks/packages.yml
+++ b/roles/configure-itrust/tasks/packages.yml
@@ -1,28 +1,29 @@
 # REFERENCES: https://coderwall.com/p/4ogyuw/ansible-install-java-8
 # Java Installation
-- name: add repo for java
-  apt_repository: repo=ppa:webupd8team/java state=present
+- name: Install add-apt-repository
   become: yes
-
-- name: set licence selected
-  shell: /bin/echo debconf shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections
+  apt: 
+    name: software-properties-common 
+    state: latest
+- name: Add Oracle Java Repository
   become: yes
-
-- name: set licence seen
-  shell: /bin/echo debconf shared/accepted-oracle-license-v1-1 seen true | /usr/bin/debconf-set-selections
+  apt_repository: 
+    repo: ppa:webupd8team/java
+- name: Accept Java 8 License
   become: yes
-
-# Update cache
-- name: Update APT package cache
-  apt: update_cache=yes
+  debconf: 
+    name: oracle-java8-installer
+    question: shared/accepted-oracle-license-v1-1
+    value: 'true' 
+    vtype: 'select'
+- name: Install Oracle Java 8 along with Git, Maven
   become: yes
-  register: updated
-# Install Packages
-- name: Install Java8, Git, Maven
-  apt: name={{ item }} state=latest update-cache=yes force=yes
+  apt: 
+    name: "{{item}}" 
+    state: latest
   with_items:
     - oracle-java8-installer
+    - ca-certificates
+    - oracle-java8-set-default
     - git
     - maven
-  when: updated.changed
-  become: yes
