--- a/roles/configure-itrust/tasks/sql.yml
+++ b/roles/configure-itrust/tasks/sql.yml
@@ -1,29 +1,73 @@
 # REFERENCES: http://mysql.freeideas.cz/subdom/mysql/2017/07/26/install-latest-mysql-5-7-on-remote-instance-using-ansible/
-- name: Download mysql repo
-  get_url:
-    url: https://dev.mysql.com/get/mysql-apt-config_0.8.9-1_all.deb
-    dest: "{{ ansible_env.HOME }}"
-    mode: 0440
+- name: Add PGP key
   become: yes
-
-- name: Install mysql repo
-  apt: "deb={{ ansible_env.HOME }}/mysql-apt-config_0.8.9-1_all.deb"
+  apt_key:
+    keyserver: pgp.mit.edu
+    id: 5072E1F5
+- name: Add official APT repository
   become: yes
-
-- name: Install python-mysqldb
+  apt_repository:
+    repo: "deb http://repo.mysql.com/apt/ubuntu/ trusty mysql-5.7"
+- name: Set mysql-server root password 
+  become: yes
+  debconf: 
+    name: mysql-server-5.7
+    question: mysql-server/root_password
+    value: "{{ env_vars.mysql_password }}"
+    vtype: password
+- name: Confirm mysql-server root password
+  become: yes
+  debconf:
+    name: mysql-server-5.7
+    question: mysql-server/root_password_again
+    value: "{{ env_vars.mysql_password }}"
+    vtype: password
+- name: Set mysql-community-server root password 
+  become: yes
+  debconf: 
+    name: mysql-community-server
+    question: mysql-community-server/root-pass
+    value: "{{ env_vars.mysql_password }}"
+    vtype: password
+- name: Confirm mysql-community-server root password 
+  become: yes
+  debconf: 
+    name: mysql-community-server
+    question: mysql-community-server/re-root-pass
+    value: "{{ env_vars.mysql_password }}"
+    vtype: password
+- name: Install mysql-server
+  become: yes
   apt:
-    name: python-mysqldb
+    name: mysql-server
     state: present
     update_cache: yes
-  become: yes
 
-- name: check latest version of mysql 5.7
-  command: bash -c "apt-cache showpkg mysql-server|grep 5.7|head -1|cut -d' ' -f1"
-  register: latestmysql57
-
-- name: Install mysql 57
-  apt:
-    name: mysql-server={{ latestmysql57.stdout }}
-    state: present
-    update_cache: yes
+# REFERENCES:  https://stackoverflow.com/questions/42267299/ansible-install-mysql-5-7-set-root-user-password?rq=1
+- name: update mysql root password for all root accounts
   become: yes
+  mysql_user:
+    name: root
+    host: "{{ item }}"
+    password: "{{ env_vars.mysql_password }}"
+    login_user: root
+    login_password: "{{ env_vars.mysql_password }}"
+    check_implicit_admin: yes
+    priv: "*.*:ALL,GRANT"
+  with_items:
+    - 127.0.0.1
+    - ::1
+    - localhost
+
+# - file:
+#     path: "{{ ansible_env.HOME }}/mysql-apt-config_0.8.9-1_all.deb"
+#     state: absent
+#     mode: 0440
+
+- name: Start the MySQL service
+  become: yes
+  service:
+    name: mysql
+    state: started
+    enabled: true
+
