--- a/roles/configure-jenkins/tasks/main.yml
+++ b/roles/configure-jenkins/tasks/main.yml
@@ -1,6 +1,5 @@
 ---
-- import_tasks: ansible.yml
+- import_tasks: basic-modules.yml
 - import_tasks: java8.yml
 - import_tasks: jenkins.yml
-- import_tasks: configure-aws.yml
 - import_tasks: jjb.yml
