--- a/roles/configure-itrust/tasks/packages.yml
+++ b/roles/configure-itrust/tasks/packages.yml
@@ -1,29 +1,19 @@
-# REFERENCES: https://coderwall.com/p/4ogyuw/ansible-install-java-8
-# Java Installation
-- name: Install add-apt-repository
-  become: yes
-  apt: 
-    name: software-properties-common 
-    state: latest
-- name: Add Oracle Java Repository
-  become: yes
-  apt_repository: 
-    repo: ppa:webupd8team/java
-- name: Accept Java 8 License
-  become: yes
-  debconf: 
-    name: oracle-java8-installer
-    question: shared/accepted-oracle-license-v1-1
-    value: 'true' 
-    vtype: 'select'
-- name: Install Oracle Java 8 along with Git, Maven
+- import_tasks: java8.yml
+
+- name: Install Git, Maven, Pip, mysql-python
   become: yes
   apt: 
     name: "{{item}}" 
     state: latest
   with_items:
-    - oracle-java8-installer
-    - ca-certificates
-    - oracle-java8-set-default
     - git
     - maven
+    - python-pip
+    - libmysqlclient-dev
+# REFERENCE: https://stackoverflow.com/questions/25865270/how-to-install-python-mysqldb-module-using-pip
+
+- name: Install mysql-python 
+  become: yes
+  pip:
+    name: MySQL-python
+    state: latest
