--- a/roles/configure-jenkins/tasks/jjb.yml
+++ b/roles/configure-jenkins/tasks/jjb.yml
@@ -24,6 +24,13 @@
     regexp: -Djava.awt.headless=true
     replace: -Djava.awt.headless=true -Djenkins.install.runSetupWizard=false
 
+- name: Change Jenkins default port
+  become: yes
+  replace:
+    path: /etc/default/jenkins
+    regexp: 'HTTP_PORT=[0-9]{4}$'
+    replace: "HTTP_PORT={{env_vars.jenkins_port | int }}"
+
 - name: Create init.groovy.d folder in $JENKINS_HOME
   become: yes
   file:
@@ -219,6 +226,7 @@
   jenkins_plugin:
     name: "{{item}}"
     with_dependencies: yes
+    url: "http://localhost:{{env_vars.jenkins_port | int }}"
   with_items:
     - git
     - postbuild-task
