--- a/roles/configure-jenkins/tasks/restart_jenkins.yml
+++ b/roles/configure-jenkins/tasks/restart_jenkins.yml
@@ -8,7 +8,7 @@
 # Make sure Jenkins is ready to run after last restart
 - name: Ensure Jenkins is up and running
   uri:
-    url: http://localhost:8080
+    url: "http://localhost:{{env_vars.jenkins_port | int }}"
     status_code: 200
     timeout: 5
   register: jenkins_service_status
