--- a/roles/itrust-fuzzer/tasks/clone-itrust2-repo.yml
+++ b/roles/itrust-fuzzer/tasks/clone-itrust2-repo.yml
@@ -1,7 +1,7 @@
 - name: Cloning iTrust repo to home
   git:
-    repo: "https://{{ env_vars.GIT_USER }}:{{env_vars.GIT_PASSWORD | urlencode }}@github.ncsu.edu/engr-csc326-staff/iTrust2-v2.git"
+    repo: "https://{{ env_vars.GIT_USER }}:{{env_vars.GIT_PASSWORD | urlencode }}@github.ncsu.edu/engr-csc326-staff/iTrust2-v1.git"
     version: master
-    dest: "{{ ansible_env.HOME }}/Milestone2/iTrust2-v2"
+    dest: "/var/lib/jenkins/project_repo/iTrust2-v1"
     force: yes
   become: yes
