jenkins-job-builder resolved

--- a/jenkins_files/itrust-test.yml
+++ b/jenkins_files/itrust-test.yml
@@ -15,7 +15,7 @@
     concurrent: false
     description: null
     disabled: false
-    name: !!python/unicode 'itrust_test'
+    name: !!python/unicode 'itrust-test'
     project-type: freestyle
     publishers:
     - raw:
